--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 
 @layer base {
   body {
-    @apply bg-[#040714] text-[#f9f9f9f9] font-body scrollbar-hide;
+    @apply bg-[#040714] text-[#f9f9f9] font-body scrollbar-hide;
   }
 }
 
@@ -21,6 +21,4 @@
   .brand {
     @apply flex relative w-52 h-32 sm:w-64 sm:h-36 border-[3px] border-[#f9f9f9] border-opacity-10 rounded-lg cursor-pointer shadow-xl overflow-hidden  hover:border-opacity-80 hover:shadow-2xl transform hover:scale-105 transition duration-300;
   }
-
-  
 }
